# qt_learn

./: QML笔记.md  README.md
01/: main.cpp  mainwindow.cpp  笔记.md
MyQQ/: MyQQ.pro  client.cpp  client.h  client.ui  drawer.cpp  drawer.h  main.cpp  server.cpp  server.h  server.ui  widget.cpp  widget.h  widget.ui  图片资源.qrc  笔记.md
build-36-C_C_2024_03_27-Debug/: 36  Makefile  moc_mainwindow.cpp  moc_mydevice.cpp  ui_mainwindow.h
build-qt37-C_C_2024_03_19-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  qt37
build-qt38-C_C_2024_03_23-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qt38
build-qt39-C_C_2024_03_23-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qt39  qtcsettings.cmake
build-qt40-C_C_2024_03_25-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  qt40
build-qt41-C_C_2024_03_26-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  qt41
build-qt42-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  moc_widget.cpp  qt42
build-qt47-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile  moc_AudioInput.cpp  moc_widget.cpp  qt47
build-qt48-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt48  qtcsettings.cmake
build-qt49-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt49  qtcsettings.cmake
build-qt50-C_C_2024_04_15-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-qt50-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt50  qtcsettings.cmake
build-qt51-Desktop_Qt_6_5_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qt51
qml/: 笔记.md
qml/qml01/: Main.qml
qml/qml02/: qml02.qml  (+1 more)
qml01/: CMakeLists.txt  MyText.qml  main.cpp
qml03/: qml03.qmlproject
qml04/: qml04.qml  qml04.qmlproject
qml05/: qml05.qml  qml05.qmlproject
qt01/: mainwindow.h  笔记.md
qt02/: baseinfo.cpp  baseinfo.h  contact.cpp  contact.h  content.cpp  content.h  detail.cpp  detail.h  main.cpp  test.cpp  test.h  笔记.md
qt03/: dialog.cpp  dialog.h  main.cpp  笔记.md
qt04/: dialog.cpp  dialog.h  main.cpp
qt05/: main.cpp  mainwindow.cpp  笔记.md
qt06/: main.cpp  mainwindow.cpp  mainwindow.h  showwidget.cpp  showwidget.h  图片  笔记.md
qt07/: butterfly.cpp  butterfly.h  main.cpp
qt08/: main.cpp  widget.h
qt09/: main.cpp  test01.txt  test03.txt  笔记.md
qt10/: main.cpp
qt11/: fileview.cpp  fileview.h  main.cpp
qt12/: fileinfo.cpp  fileinfo.h  main.cpp
qt13/: main.cpp  watcher.cpp  watcher.h  watcher.ui
qt14/: main.cpp  networkinformation.cpp  networkinformation.h  笔记.md
qt15/: main.cpp  udpserver.cpp  udpserver.h  笔记.md
qt16/: main.cpp  udpclient.cpp  udpclient.h
qt17/: main.cpp  server.cpp  server.h  tcpclientsocket.cpp  tcpclientsocket.h  tcpserver.cpp  tcpserver.h  笔记.md
qt18/: main.cpp  tcpclient.cpp  tcpclient.h
qt19/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt20/: main.cpp  mainwindow.cpp  mainwindow.h
qt21/: keyevent.cpp  keyevent.h  main.cpp
qt22/: main.cpp  threaddialog.cpp  threaddialog.h  workthread.cpp  workthread.h  笔记.md
qt23/: main.cpp
qt24/: main.cpp  笔记.md
qt25/: dialog.cpp  dialog.h  main.cpp  timeserver.cpp  timeserver.h  timethread.cpp
qt26/: main.cpp  timeclient.cpp
qt27/: main.cpp  笔记.md
qt28/: 28.pro  connectdialog.cpp  connectdialog.h  connectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  笔记.md
qt29/: main.cpp  widget.cpp  widget.h  笔记.md
qt30/: animationdialog.cpp  animationdialog.h  animationdialog.ui  animationstackwidget.cpp  animationstackwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  page01.cpp  page01.h  page01.ui  page02.cpp  page02.h  page02.ui  source.qrc  笔记.md
qt31/: iplineedit.cpp  iplineedit.h  main.cpp  widget.cpp  笔记.md
qt32/: main.cpp  res.qrc  systemtray.cpp  systemtray.h  systemtray.ui
qt33/: main.cpp  qqcell.cpp  qqcell.h  qqcellline.cpp  qqcellline.h  qqcellline.ui  qqcelltitle.cpp  qqcelltitle.h  qqcelltitle.ui  res.qrc  widget.cpp  widget.h  笔记.md
qt34/: linemessage.cpp  linemessage.h  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui  笔记.md
qt35/: cutdialog.cpp  cutdialog.h  main.cpp  photoshotdialog.cpp  photoshotdialog.h  photoshotdialog.ui  pictureedit.cpp  pictureedit.h  pictureedit.ui  qt35.pro  笔记.md
qt36/: 36.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydevice.cpp  mydevice.h  笔记.md
qt37/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt38/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
qt39/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt40/: CMakeLists.txt  main.cpp  widget.h
qt41/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  笔记.md
qt42/: main.cpp  qt42.pro  widget.cpp  widget.h  yinpin.pcm
qt43/: main.cpp  qt43.pro  widget.cpp  widget.h  widget.ui
qt44/: CMakeLists.txt  main.cpp
qt45/: main.cpp  qt45.pro
qt46/: CMakeLists.txt  main.cpp  mythread_1.cpp  mythread_1.h  widget.cpp  widget.h
qt47/: AudioInput.cpp  AudioInput.h  emitsignal.cpp  emitsignal.h  main.cpp  qt47.pro  widget.cpp  widget.h
qt48/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
qt49/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt50/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt51/: CMakeLists.txt  lineedit.cpp  lineedit.h  main.cpp  widget.cpp  widget.h
qt52/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
qt53/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
qt54/: CMakeLists.txt  clienthandler.cpp  clienthandler.h  fileclienthandler.cpp  fileclienthandler.h  fileserver.cpp  fileserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsefiledata.cpp  parsefiledata.h  server.cpp  server.h
qt55/: CMakeLists.txt  client.cpp  client.h  clientthread.cpp  clientthread.h  fileblock.h  fileclient.cpp  fileclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  笔记.md
(+138 files in other folders)
